sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: type mismatch;
 found   : java.awt.Color
 required: Int
      case Color.BLUE => apresBleu = apresBleu +1
                 ^DutchFlagAlgo:9: error: type mismatch;
 found   : java.awt.Color
 required: Int
      case Color.WHITE => echange(apresBleu,apresBlanc);apresBlanc=1+apresBlanc
                 ^DutchFlagAlgo:10: error: type mismatch;
 found   : java.awt.Color
 required: Int
      case Color.RED => echange(apresBleu,blancRouge);blancRouge=1+blancRouge;if(blancRouge<apresBlanc){apresBlanc=blancRouge}
                 ^