sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var apresBleu=0
  var blancRouge= getTaille() -1
  var apresBlanc= getTaille() -1
  while(!estTrie){
  	getCouleur(apresBleu) match{
      case Color.BLUE => apresBleu = apresBleu +1
      case Color.WHITE => echange(apresBleu,apresBlanc);apresBlanc=1+apresBlanc
      case Color.RED => echange(apresBleu,blancRouge);blancRouge=1+blancRouge;if(blancRouge<apresBlanc){apresBlanc=blancRouge}
    }
        
      }
    }

  

